fixes storyID 9811571- user dropdown falling behind video on index

--- a/media/css/imported/top_user_panel.css
+++ b/media/css/imported/top_user_panel.css
@@ -139,8 +139,9 @@
 /* New Homepage overrides */
 
 #header .user_panel {
-  top: -19px;
+  top: 0px;
   padding-right: 0;
+  position: relative;
 }
 
 
